MALO-5 Fix dishes, fix entries post